--- a/src/app/funds/balance/pending-request-table/pending-request-table.component.html
+++ b/src/app/funds/balance/pending-request-table/pending-request-table.component.html
@@ -33,6 +33,7 @@
             <div class="orders__pair-icon">
               <img
                 [src]="item.currency | getIconUrl:true"
+                onerror="this.src = 'assets/img/currency-icons/no_icon.svg'"
               >
             </div>
             <span>{{item.currency}}</span>
