--- a/src/app/funds/balance/qubera-popup/withdraw/step-one-withdraw/step-one-withdraw.component.html
+++ b/src/app/funds/balance/qubera-popup/withdraw/step-one-withdraw/step-one-withdraw.component.html
@@ -15,16 +15,18 @@
             (click)="toggleCurrencyDropdown()"
             [ngClass]="{'select__value--error': fiatDataByName && !selectedMerchant}"
           >
-          <div class="icon-wr">
-            <img
-              [src]="activeFiat.name | getIconUrl:true"
-              class="select__list-item-icon select__list-item-icon--mobile"
-            >
-            <img
-              [src]="activeFiat.name | getIconUrl"
-              class="select__list-item-icon select__list-item-icon--destop"
-            >
-          </div>
+            <div class="icon-wr">
+              <img
+                [src]="activeFiat.name | getIconUrl:true"
+                onerror="this.src = 'assets/img/currency-icons/no_icon.svg'"
+                class="select__list-item-icon select__list-item-icon--mobile"
+              >
+              <img
+                [src]="activeFiat.name | getIconUrl"
+                onerror="this.src = 'assets/img/currency-icons/no_icon.svg'"
+                class="select__list-item-icon select__list-item-icon--destop"
+              >
+            </div>
             {{activeFiat?.name}}
           </div>
           <div class="select__label">{{'Currency' | translate}}</div>
@@ -40,12 +42,13 @@
               *ngFor="let currency of fiatNames"
               (click)="selectCurrency(currency)"
             >
-            <div class="icon-wr">
-              <img
-                [src]="currency.name | getIconUrl"
-                class="select__list-item-icon"
-              >
-            </div>
+              <div class="icon-wr">
+                <img
+                  [src]="currency.name | getIconUrl"
+                  onerror="this.src = 'assets/img/currency-icons/no_icon.svg'"
+                  class="select__list-item-icon"
+                >
+              </div>
               {{currency?.name}}
             </li>
           </ul>
