--- a/src/app/funds/balance/balance-mob/balance-mob.component.html
+++ b/src/app/funds/balance/balance-mob/balance-mob.component.html
@@ -171,7 +171,10 @@
             <td class="table__cell table__cell--tal">
               <div class="balance__currency">
                 <div class="balance__currency-icon">
-                  <img [src]="item.currencyName | getIconUrl:true">
+                  <img
+                    [src]="item.currencyName | getIconUrl:true"
+                    onerror="this.src = 'assets/img/currency-icons/no_icon.svg'"
+                  >
                 </div>
                 <div>
                   <span>{{item.currencyName}}</span>
