--- a/src/app/funds/balance/qubera-mob/qubera-mob.component.html
+++ b/src/app/funds/balance/qubera-mob/qubera-mob.component.html
@@ -81,7 +81,7 @@
     <table
       class="table table--mob"
       [ngClass]="{'balance-qubera': currTab === Tab.QUBERA}"
-      *ngIf="balances && (kycStatus === KYC_STATUS.SUCCESS)"
+      *ngIf="balances && (kycStatus === KYC_STATUS.OK)"
     >
       <thead class="table__head">
         <tr class="table__head-row">
@@ -174,7 +174,7 @@
   >
     <div
       class="qubera-head"
-      *ngIf="!(kycStatus === KYC_STATUS.SUCCESS || kycStatus === KYC_STATUS.PENDING)"
+      *ngIf="kycStatus === KYC_STATUS.NULL"
     >
       <h3>
         {{'Open account for $20 and get 0% commission' | translate}} <br>
@@ -182,11 +182,10 @@
       </h3>
     </div>
 
-    <!-- если не зареган на fug -->
     <div [ngSwitch]="kycStatus">
       <div
         class="qubera-btn-wr"
-        *ngSwitchCase="KYC_STATUS.SUCCESS"
+        *ngSwitchCase="KYC_STATUS.OK"
       >
         <button
           class="btn btn--active balance__title-btn"
@@ -195,80 +194,53 @@
         >{{'Create Account' | translate}}</button>
       </div>
 
-      <!-- end 'если не зареган на fug' -->
-
-      <!-- если заявка на подтверждении -->
-
       <div
-        class="wait-block"
-        *ngSwitchCase="KYC_STATUS.PENDING"
+        class="qubera-btn-wr"
+        *ngSwitchCase="KYC_STATUS.ERROR"
       >
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          width="55"
-          height="55"
-          viewBox="0 0 55 55"
-          fill="none"
-        >
-          <rect
-            x="0.5"
-            y="0.5"
-            width="54"
-            height="54"
-            rx="27"
-            stroke="#237BEF"
-          />
-          <g>
-            <path
-              d="M31.7428 24.8384C32.528 24.3144 33 23.4328 33 22.4888V18H21V22.4888C21 23.4328 21.472 24.3144 22.2572 24.8384L26.2 27.4668V28.5336L22.2572 31.162C21.472 31.6856 21 32.5672 21 33.5112V38H33V33.5112C33 32.5672 32.528 31.6856 31.7428 31.1616L27.8 28.5332V27.4664L31.7428 24.8384Z"
-              fill="#237BEF"
-            />
-            <path
-              d="M31.077 23.8405C31.5298 23.5385 31.8002 23.0333 31.8002 22.4897C31.8002 21.9673 31.4446 21.5117 30.9378 21.3849L24.9166 19.8797C23.537 19.5345 22.2002 20.5781 22.2002 22.0005V22.4897C22.2002 23.0333 22.4706 23.5385 22.9234 23.8405L26.6002 26.5389V32.8897C26.6002 34.3417 25.0946 35.3041 23.777 34.6941C23.0674 34.3657 22.2082 34.8517 22.2006 35.6337C22.2006 35.6393 22.2006 35.6445 22.2006 35.6501V38.0005H31.8006V33.5113C31.8006 33.5057 31.8006 33.5005 31.8006 33.4949C31.793 32.7225 31.045 32.1661 30.2842 32.2985L29.4646 32.4413C28.3866 32.6289 27.4002 31.7993 27.4002 30.7057V26.5389L31.077 23.8405Z"
-              fill="#94C2FF"
-            />
-            <path
-              d="M35 38H19V39.6H35V38Z"
-              fill="#94C2FF"
-            />
-            <path
-              d="M36.6 39.2001H35.4V37.6001H18.6V39.2001H17.4C17.1792 39.2001 17 39.3789 17 39.6001C17 39.8213 17.1792 40.0001 17.4 40.0001H18.6H19H35H35.4H36.6C36.8208 40.0001 37 39.8213 37 39.6001C37 39.3789 36.8208 39.2001 36.6 39.2001ZM19.4 38.4001H34.6V39.2001H19.4V38.4001Z"
-              fill="#237BEF"
-            />
-            <path
-              d="M35 16.4001H19V18.0001H35V16.4001Z"
-              fill="#94C2FF"
-            />
-            <path
-              d="M36.6 16H35.4H35H19H18.6H17.4C17.1792 16 17 16.1788 17 16.4C17 16.6212 17.1792 16.8 17.4 16.8H18.6V18.4H35.4V16.8H36.6C36.8208 16.8 37 16.6212 37 16.4C37 16.1788 36.8208 16 36.6 16ZM34.6 17.6H19.4V16.8H34.6V17.6Z"
-              fill="#237BEF"
-            />
-          </g>
-          <defs>
-            <clipPath id="clip0">
-              <rect
-                width="24"
-                height="24"
-                fill="white"
-                transform="translate(15 16)"
-              />
-            </clipPath>
-          </defs>
-        </svg>
-        <span>{{'KYC application on confirmation' | translate}}</span>
-      </div>
+        <h4 class="warning">{{'Verification rejected. Try again and make sure your documents are in valid period and clearly visible.' | translate}}</h4>
 
-      <button
-        *ngSwitchCase="'Pending'"
-        class="print"
-        (click)="quberaKycVerification.emit(true)"
-      >
-        <span>{{'Start again' | translate}}</span>
-      </button>
+        <button
+          class="btn btn--active balance__title-btn"
+          (click)="quberaKycVerification.emit(true)"
+        >
+          {{'Start again' | translate}}
+        </button>
+      </div>
 
       <div
         class="qubera-btn-wr"
-        *ngSwitchDefault
+        *ngSwitchCase="KYC_STATUS.WARN"
+      >
+        <h4 class="warning">{{'Something went wrong. Try again and please make sure, that your documents are in high quality.' | translate}}</h4>
+
+        <button
+          class="btn btn--active balance__title-btn"
+          (click)="quberaKycVerification.emit(true)"
+        >
+          {{'Start again' | translate}}
+        </button>
+      </div>
+
+      <div
+        class="qubera-btn-wr"
+        *ngSwitchCase="KYC_STATUS.NONE"
+      >
+        <h4 class="warning">
+          {{'KYC system sent you an email with verification link. Please check your email. Did Not receive it? Click here to start the KYC process again.' | translate}}
+        </h4>
+
+        <button
+          class="btn btn--active balance__title-btn"
+          (click)="quberaKycVerification.emit(true)"
+        >
+          {{'Start again' | translate}}
+        </button>
+      </div>
+
+      <div
+        class="qubera-btn-wr"
+        *ngSwitchCase="KYC_STATUS.NULL"
       >
         <button
           class="btn btn--active balance__title-btn"
@@ -279,12 +251,9 @@
       </div>
     </div>
 
-    <!-- end 'если заявка на подтверждении' -->
-
-
     <div
       class="qubera-benefits"
-      *ngIf="!(kycStatus === KYC_STATUS.SUCCESS || kycStatus === KYC_STATUS.PENDING)"
+      *ngIf="kycStatus === KYC_STATUS.NULL"
     >
       <div class="ben-head">
         <h6>{{'Benefits' | translate}}</h6>
@@ -458,10 +427,7 @@
       <h6>For VIP clients</h6>
       <p>Up to $ 150,000 limit for deposits and withdrawals.</p>
     </div> -->
-    <div
-      class="how-work"
-      *ngIf="kycStatus !== KYC_STATUS.SUCCESS"
-    >
+    <div class="how-work">
       <h6>{{'How does it work?' | translate}}</h6>
       <p>
         {{'Using your Exrates account you are able to open a Bank account. This is your personal account which you can use for instant fiat transfers directly to your Exrates trading account.' | translate}}
