--- a/src/app/ieo/components/ieo-info/ieo-info.component.html
+++ b/src/app/ieo/components/ieo-info/ieo-info.component.html
@@ -3,16 +3,30 @@
   <div class="fs-wr">
     <div class="fs-wr-inner">
       <div class="fs-image-container">
-        <img src="assets/img/ieo/bg.jpg" alt="">
+        <img
+          src="assets/img/ieo/bg.jpg"
+          alt=""
+        >
       </div>
-      <div class="fs-content" *ngIf="IEOData">
-          <div class="bittorrent" [ngSwitch]="IEOData.currencyName" >
-            <img src="assets/img/ieo/dom.png" alt="DOM" *ngSwitchCase="'DOM'">
-          </div>
+      <div
+        class="fs-content"
+        *ngIf="IEOData"
+      >
+        <div
+          class="bittorrent"
+          [ngSwitch]="IEOData.currencyName"
+        >
+          <img
+            src="assets/img/ieo/dom.png"
+            alt="DOM"
+            *ngSwitchCase="'DOM'"
+          >
+        </div>
         <div class="btc-session">
           <div class="b-s-title">
-            <h3>{{IEOData.currencyDescription}} - BTC {{'Session' | translate}}<span
-                class="upcoming {{IEOData.status | lowercase}}">{{IEOData.status | showStageStatus}}</span></h3>
+            <h3>
+              {{IEOData.currencyDescription}} - BTC {{'Session' | translate}}
+              <span class="upcoming {{IEOData.status | lowercase}}">{{IEOData.status | showStageStatus}}</span></h3>
           </div>
           <table class="b-s-table">
             <tr>
@@ -20,8 +34,7 @@
               <td class="right-text">
                 <span *ngIf="!IEOData.rate">{{'To be determined' | translate}}</span>
                 <span *ngIf="IEOData.rate">
-                  1 {{IEOData.currencyName}} =
-                  {{(IEOData.rate || 0) | roundCurrency: 'BTC' | formatCurrency: 'short': 'BTC'}} BTC
+                  1 {{IEOData.currencyName}} = {{IEOData.rate | currencyFormat}} BTC
                 </span>
               </td>
             </tr>
@@ -34,16 +47,18 @@
             <tr>
               <td>{{'IEO Goal' | translate}}：</td>
               <td class="right-text">
-                <span>{{(sessionSupply || 0) | roundCurrency: 'BTC' | formatCurrency: 'short': 'BTC'}} BTC</span></td>
+                <span>{{sessionSupply | currencyFormat}} BTC</span></td>
             </tr>
           </table>
           <div class="buy-block">
 
-            <div class="progress-block" *ngIf="stage.RUNNING === currentStage">
+            <div
+              class="progress-block"
+              *ngIf="stage.RUNNING === currentStage"
+            >
               <div class="currency-info">
                 <div class="currency-buyed">
-                  <span
-                    class="buyed-value">{{boughtAmount || 0 | roundCurrency: 'BTC' | formatCurrency: 'short': 'BTC'}}</span>
+                  <span class="buyed-value">{{boughtAmount | currencyFormat}}</span>
                   <span class="currency-name">{{IEOData.currencyName}}</span>
                 </div>
                 <div class="percentage">
@@ -51,44 +66,66 @@
                 </div>
               </div>
               <div class="currency-bar">
-                <div class="currency-bar-progress" [style.width.%]="boughtAmountPer"></div>
+                <div
+                  class="currency-bar-progress"
+                  [style.width.%]="boughtAmountPer"
+                ></div>
               </div>
             </div>
 
             <div class="amount">
               <p>{{'Amount' | translate}}:
-                <span>{{(IEOData.amount || 0) | roundCurrency: 'BTC' | formatCurrency: 'short': 'BTC'}}
-                  {{IEOData.currencyName}}</span></p>
+                <span>{{IEOData.amount | currencyFormat}} {{IEOData.currencyName}}</span>
+              </p>
             </div>
 
-            <div class="starts" *ngIf="stage.PENDING === currentStage">
+            <div
+              class="starts"
+              *ngIf="stage.PENDING === currentStage"
+            >
               <p>{{'Starts In' | translate}}:</p>
-              <div class="timer" [innerHTML]="timer"></div>
+              <div
+                class="timer"
+                [innerHTML]="timer"
+              ></div>
             </div>
 
             <div class="button-part">
               <div>
-                <button class="standart-btn"
-                  [ngClass]="{'ieo-buy': requirements.kycCheck && !requirements.countryCheck}"
+                <button
+                  class="standart-btn"
+                  (click)="buy.emit()"
+                >
+                  <!-- [ngClass]="{'ieo-buy': requirements.kycCheck && !requirements.countryCheck}"
                   [disabled]="ieoLoading || (currentStage !== stage.RUNNING) || (requirements.kycCheck && !requirements.countryCheck)"
-                  *ngIf="isAuthenticated && (currentStage === stage.RUNNING || currentStage === stage.PENDING)"
-                  (click)="buy.emit()">
+                  *ngIf="isAuthenticated && (currentStage === stage.RUNNING || currentStage === stage.PENDING)" -->
                   <span>{{'Buy Now' | translate}}</span>
                 </button>
-                <div class="input-hint-wrapper" *ngIf="isAuthenticated">
+                <div
+                  class="input-hint-wrapper"
+                  *ngIf="isAuthenticated"
+                >
                   <span class="wrap-input__message">
                     {{'Sorry, your country not allowed' | translate}}
                   </span>
                 </div>
               </div>
-              <button class="standart-btn" *ngIf="!isAuthenticated" (click)="onLogin()">
+              <button
+                class="standart-btn"
+                *ngIf="!isAuthenticated"
+                (click)="onLogin()"
+              >
                 <span>{{'Log In' | translate}}</span>
               </button>
 
-              <button class="standart-btn" (click)="goToNewsPage()" *ngIf="isAuthenticated
-                 && (currentStage === stage.SUCCEEDED
-                 || currentStage === stage.FAILED
-                  || currentStage === stage.TERMINATED)">
+              <button
+                class="standart-btn"
+                (click)="goToNewsPage()"
+                *ngIf="isAuthenticated
+                  && (currentStage === stage.SUCCEEDED
+                    || currentStage === stage.FAILED
+                    || currentStage === stage.TERMINATED)"
+              >
                 <span>{{'More' | translate}}</span>
               </button>
 
