--- a/src/app/shared/components/popup-buy-ieo/popup-buy.component.html
+++ b/src/app/shared/components/popup-buy-ieo/popup-buy.component.html
@@ -1,24 +1,43 @@
 <div class="overlay ieo-popup-buy">
   <app-loader *ngIf="loading"></app-loader>
-	<div class="popup" *ngIf="IEOData && !loading">
-    <form [formGroup]="form" (submit)="confirmForm($event)">
-      <div class="popup__close" (click)="closeMe()"></div>
+  <div
+    class="popup"
+    *ngIf="IEOData && !loading"
+  >
+    <form
+      [formGroup]="form"
+      (submit)="confirmForm($event)"
+    >
+      <div
+        class="popup__close"
+        (click)="closeMe()"
+      ></div>
       <div class="ieo-pair">
         <span>{{IEOData.currencyName}}</span>/<span>BTC</span>
       </div>
-      <h6 class="popup__title tnx-head">1 {{IEOData.currencyName}} =
-        {{(IEOData.rate || 0) | roundCurrency: 'BTC' | formatCurrency: 'short': 'BTC'}} BTC</h6>
+      <h6 class="popup__title tnx-head">
+        1 {{IEOData.currencyName}} = {{IEOData.rate | currencyFormat}} BTC
+      </h6>
       <div class="balance-txt">
-        <span>{{'Available to purchase:' | translate}}
-          {{(IEOData.availableAmount || 0) | roundCurrency: 'BTC' | formatCurrency: 'short': 'BTC'}} {{IEOData.currencyName}}
+        <span>
+          {{'Available to purchase:' | translate}} {{IEOData.availableAmount | currencyFormat}} {{IEOData.currencyName}}
         </span>
       </div>
       <div class="input-part">
         <div class="avaliable">{{'Balance:' | translate}}
-          <a class="link" style="pointer-events: auto;">{{(userBalanceBTC || 0) | roundCurrency: 'BTC' | formatCurrency: 'short': 'BTC'}} BTC</a>
+          <a
+            class="link"
+            style="pointer-events: auto;"
+          >
+            {{userBalanceBTC | currencyFormat}} BTC
+          </a>
         </div>
-        <div class="wrap-input" [ngClass]="{'wrap-input--error': !form.valid && form.dirty}">
-          <input class="wrap-input__input"
+        <div
+          class="wrap-input"
+          [ngClass]="{'wrap-input--error': !form.valid && form.dirty}"
+        >
+          <input
+            class="wrap-input__input"
             formControlName="amount"
             name="amount"
             autocomplete="off"
@@ -29,46 +48,61 @@
             (input)="onInput($event)"
             (blur)="onBlur($event)"
           >
-          <label class="wrap-input__label" for="">{{'Quantity' | translate}}</label>
-          <label class="wrap-input__currency" for="" >{{IEOData.currencyName}}</label>
+
+          <label
+            class="wrap-input__label"
+            for=""
+          >
+            {{'Quantity' | translate}}
+          </label>
+
+          <label
+            class="wrap-input__currency"
+            for=""
+          >
+            {{IEOData.currencyName}}
+          </label>
           <div class="wrap-input__line"></div>
 
 
           <!-- Input error section starts -->
-          <div
-            class="input-hint-wrapper"
-            *ngIf="amountInput.errors &&
-                  (amountInput.errors['minThen'] || amountInput.errors['required']) &&
-                  amountInput.dirty"
-          >
-            <span class="wrap-input__message">
-              {{'Minimum amount' | translate}} {{+(minSum || 0) | roundCurrency: 'BTC' | formatCurrency: 'short': 'BTC'}} {{IEOData.currencyName}}
-            </span>
-          </div>
-          <div
-            class="input-hint-wrapper"
-            *ngIf="amountInput.errors && amountInput.errors['maxThen'] && amountInput.dirty"
-          >
-            <span class="wrap-input__message">
-              {{'Maximum amount' | translate}} {{(maxSumShow || 0)}} {{IEOData.currencyName}}
-            </span>
-          </div>
+          <ng-container *ngIf="amountInput.errors && amountInput.dirty">
+            <div class="input-hint-wrapper">
+              <span
+                class="wrap-input__message wrap-input__message--show"
+                *ngIf="(amountInput.errors['minThen'] || amountInput.errors['required'])"
+              >
+                {{'Minimum amount' | translate}} {{minSum | currencyFormat}} {{IEOData.currencyName}}
+              </span>
+              <span
+                class="wrap-input__message wrap-input__message--show"
+                *ngIf="amountInput.errors['maxThen']"
+              >
+                {{'Maximum amount you can buy' | translate}} {{maxSumShow | currencyFormat}} {{IEOData.currencyName}}
+              </span>
+            </div>
+          </ng-container>
           <!-- Input error section ends -->
 
         </div>
       </div>
       <div class="max-value">
         <span class="temp-style">{{'Max Available To Buy:' | translate}}</span>
-        <a href="#" (click)="insertMax($event)"> {{(maxSumShow || 0)}} </a>
+        <a
+          href="#"
+          (click)="insertMax($event)"
+        >
+          {{maxSumShow | currencyFormat}}
+        </a>
         <span class="temp-style">{{IEOData.currencyName}}</span>
       </div>
       <div class="pay">
-        <p>{{'Pay:' | translate}} {{((pay || 0)) | roundCurrency: 'BTC' | formatCurrency: 'short': 'BTC'}} BTC</p>
+        <p>{{'Pay:' | translate}} {{pay | currencyFormat}} BTC</p>
       </div>
       <button
         class="btn btn--active btn--center btn-ieo"
-        [disabled]="!form.valid || inputValue <= 0"
+        [disabled]="form.invalid || loading"
       >{{'Confirm' | translate}}</button>
     </form>
-	</div>
+  </div>
 </div>
