--- a/src/app/funds/balance/qubera-table/qubera-table.component.scss
+++ b/src/app/funds/balance/qubera-table/qubera-table.component.scss
@@ -23,8 +23,9 @@
   }
 }
 
-.warning {
-  font-size: 20px;
-  color: orange;
-  margin-bottom: 30px;
+.warning-bl {
+  font-size: 24px;
+    line-height: 1.3;
+    color: #EB5757;
+    margin-bottom: 30px;
 }
