--- a/src/app/freecoins/freecoins-popup/freecoins-popup-step-one/freecoins-popup-step-one.component.html
+++ b/src/app/freecoins/freecoins-popup/freecoins-popup-step-one/freecoins-popup-step-one.component.html
@@ -265,7 +265,7 @@
       translate}}.
     </li>
     <li class="note__list-item">
-      {{'To comfirm give coins, you will need to enter 2fa code (from letter or
+      {{'To confirm give coins, you will need to enter 2fa code (from letter or
       google app)' | translate}}.
     </li>
     <li class="note__list-item">
