--- a/src/app/funds/balance/refill-money/refill-step-two/refill-fiat/refill-fiat.component.html
+++ b/src/app/funds/balance/refill-money/refill-step-two/refill-fiat/refill-fiat.component.html
@@ -7,11 +7,11 @@
     class="title refill__title"
     *ngIf="!submitSuccess"
   >{{'Fiat Deposit' | translate}} <span>{{activeFiat.name}}</span></h2>
-  <form [formGroup]="form">
-    <div
-      class="refill__inputs-wrap"
-      *ngIf="!submitSuccess"
-    >
+  <form
+    [formGroup]="form"
+    *ngIf="!submitSuccess"
+  >
+    <div class="refill__inputs-wrap">
       <!-- TODO add styles to select--error -->
 
       <div class="select refill__select">
@@ -167,46 +167,48 @@
 
     </div>
   </form>
+  <ng-container *ngIf="!submitSuccess">
+    <div class="send__line"></div>
 
-  <div class="send__line"></div>
-
-  <ng-container>
-    <div class="send__info">
-      <div class="send__info-row">
-        <div class="send__info-title">{{'You want to refill:' | translate}}</div>
-        <div class="send__info-value">
-          {{calculateData.amount | currencyFormat: 'USD'}} {{activeFiat.name}}
+    <ng-container>
+      <div class="send__info">
+        <div class="send__info-row">
+          <div class="send__info-title">{{'You want to refill:' | translate}}</div>
+          <div class="send__info-value">
+            {{calculateData.amount | currencyFormat: 'USD'}} {{activeFiat.name}}
+          </div>
+        </div>
+        <div class="send__info-row">
+          <div class="send__info-title">{{'Exchange comission:' | translate}}</div>
+          <div class="send__info-value">{{calculateData.companyCommissionRate}} = {{calculateData.companyCommissionAmount}}
+            {{activeFiat.name}}
+          </div>
+        </div>
+        <div class="send__info-row">
+          <div class="send__info-title">{{'Total comission:' | translate}}</div>
+          <div class="send__info-value">{{calculateData.commission_rates_sum}}% = {{calculateData.totalCommissionAmount}}
+            {{activeFiat.name}}
+          </div>
+        </div>
+        <div class="send__info-row">
+          <div class="send__info-title">{{'Total with comission:' | translate}}</div>
+          <div class="send__info-value">{{calculateData.resultAmount}} {{activeFiat.name}}</div>
         </div>
       </div>
-      <div class="send__info-row">
-        <div class="send__info-title">{{'Exchange comission:' | translate}}</div>
-        <div class="send__info-value">{{calculateData.companyCommissionRate}} = {{calculateData.companyCommissionAmount}}
-          {{activeFiat.name}}
-        </div>
-      </div>
-      <div class="send__info-row">
-        <div class="send__info-title">{{'Total comission:' | translate}}</div>
-        <div class="send__info-value">{{calculateData.commission_rates_sum}}% = {{calculateData.totalCommissionAmount}}
-          {{activeFiat.name}}
-        </div>
-      </div>
-      <div class="send__info-row">
-        <div class="send__info-title">{{'Total with comission:' | translate}}</div>
-        <div class="send__info-value">{{calculateData.resultAmount}} {{activeFiat.name}}</div>
-      </div>
-    </div>
 
-    <button
-      class="btn btn--center"
-      *ngIf="!submitSuccess && selectedMerchant"
-      (click)="submitRefill()"
-      [disabled]="!form.valid || !selectedMerchant.name || loading"
-    >
-      {{'Refill' | translate}}
-    </button>
+      <button
+        class="btn btn--center"
+        *ngIf="!submitSuccess && selectedMerchant"
+        (click)="submitRefill()"
+        [disabled]="!form.valid || !selectedMerchant.name || loading"
+      >
+        {{'Refill' | translate}}
+      </button>
+    </ng-container>
+
+    <div class="send__line"></div>
   </ng-container>
 
-  <div class="send__line"></div>
 
   <!-- показывать после успешного создания заявки-->
   <div
