--- a/src/app/freecoins/freecoins.component.html
+++ b/src/app/freecoins/freecoins.component.html
@@ -2,16 +2,15 @@
   <div class="freecoins-head-container">
     <div class="txt-container">
       <h1 class="page-title__text">Free Coins</h1>
-      <p>You can collect free coins every day. Watch the counters and don't miss free coins.</p>
+      <p>You can collect free coins every day. Watch the counters and don't miss
+        free coins.</p>
     </div>
     <div
       class="button-wr"
-      *ngIf="isVipUser"
-    >
+      *ngIf="isVipUser">
       <button
         (click)="onToggleFreeCoinsPopup(true)"
-        class="btn btn--active balance__title-btn"
-      >
+        class="btn btn--active balance__title-btn">
         {{'Give away free coins' | translate}}
       </button>
     </div>
@@ -20,9 +19,12 @@
     <table class="table ballance-table">
       <thead>
         <tr>
-          <th class="table__cell-head table__cell-head--tal">{{'Coins' | translate}}</th>
-          <th class="table__cell-head table__cell-head--tar">{{'Amount' | translate}}</th>
-          <th class="table__cell-head table__cell-head--tar">{{'Time Left' | translate}}</th>
+          <th class="table__cell-head table__cell-head--tal">{{'Coins' |
+            translate}}</th>
+          <th class="table__cell-head table__cell-head--tar">{{'Amount' |
+            translate}}</th>
+          <th class="table__cell-head table__cell-head--tar">{{'Time Left' |
+            translate}}</th>
           <th class="table__cell-head table__cell-head--tac">
             <div class="button-cont">
               <span>{{'Actions' | translate}}</span>
@@ -33,8 +35,7 @@
       <tbody class="table__body">
         <tr
           class="table__row balance__table-row"
-          *ngFor="let fc of freecoinsList; trackBy: trackByFn"
-        >
+          *ngFor="let fc of freecoinsList; trackBy: trackByFn">
           <td class="table__cell">
             <div class="balance__currency">
               <div class="balance__currency-icon">
@@ -48,62 +49,73 @@
             </div>
           </td>
           <td class="table__cell table__cell--tar">
-            <span>{{fc.partial_amount}}</span>
+            <span>{{fc.partial_amount| currencyFormat}}</span>
           </td>
           <td class="table__cell table__cell--tar">
             <div
-              class="freecoin-message"
-              [ngClass]="{'green': !(freecoinsState[fc.id] | freecoinStatePipe: 'last_received' | disableGetCoin: fc.time_range | async)}"
-              *ngIf="!fc.single"
-            >
-              <span>{{freecoinsState[fc.id] | freecoinStatePipe: 'last_received' | timeLeftFreeCoins: fc.time_range | async}}</span>
+              class="freecoin-message" [ngClass]="{'green m-d-none':
+              !(freecoinsState[fc.id] | freecoinStatePipe: 'last_received' |
+              disableGetCoin: fc.time_range | async)}"
+              *ngIf="!fc.single">
+              <span>{{freecoinsState[fc.id] | freecoinStatePipe: 'last_received'
+                | timeLeftFreeCoins: fc.time_range | async}}</span>
+            </div>
+            <div class="button-wr-mobile mobile-content">
+              <button
+                *ngIf="!((freecoinsState[fc.id] | freecoinStatePipe:
+                'last_received' | disableGetCoin: fc.time_range | async) ||
+                fc.single && (freecoinsState[fc.id] | freecoinStatePipe:
+                'received'))"
+                class="btn btn--center btn--small"
+                (click)="onCheckCaptcha(fc.id)">{{'Receive' | translate}}</button>
             </div>
             <div
-              class="freecoin-message green"
-              *ngIf="fc.single && !(freecoinsState[fc.id] | freecoinStatePipe: 'received')"
-            >
+              class="freecoin-message green m-d-none"
+              *ngIf="fc.single && !(freecoinsState[fc.id] | freecoinStatePipe:
+              'received')">
               <span>{{'Available' | translate}}</span>
             </div>
             <div
               class="freecoin-message red"
-              *ngIf="fc.single && (freecoinsState[fc.id] | freecoinStatePipe: 'received')"
-            >
+              *ngIf="fc.single && (freecoinsState[fc.id] | freecoinStatePipe:
+              'received')">
               <span>{{'Already used' | translate}}</span>
             </div>
           </td>
           <td class="table__cell">
             <div class="button-cont">
               <button
-                *ngIf="!((freecoinsState[fc.id] | freecoinStatePipe: 'last_received' | disableGetCoin: fc.time_range | async) ||
-                  fc.single && (freecoinsState[fc.id] | freecoinStatePipe: 'received'))"
+                *ngIf="!((freecoinsState[fc.id] | freecoinStatePipe:
+                'last_received' | disableGetCoin: fc.time_range | async) ||
+                fc.single && (freecoinsState[fc.id] | freecoinStatePipe:
+                'received'))"
                 class="btn btn--center btn--empty-blue btn--small btn--hidden"
-                (click)="onCheckCaptcha(fc.id)"
-              >{{'Receive' | translate}}</button>
-
+                (click)="onCheckCaptcha(fc.id)">{{'Receive' | translate}}</button>
               <div
-                *ngIf="(freecoinsState[fc.id] | freecoinStatePipe: 'last_received' | disableGetCoin: fc.time_range | async) ||
-                  fc.single && (freecoinsState[fc.id] | freecoinStatePipe: 'received')"
-                [tooltip]="fc.single ? 'Sorry, you can recieve this only once' : 'You need to wait for the countdown to end' | translate"
+                *ngIf="(freecoinsState[fc.id] | freecoinStatePipe:
+                'last_received' | disableGetCoin: fc.time_range | async) ||
+                fc.single && (freecoinsState[fc.id] | freecoinStatePipe:
+                'received')"
+                [tooltip]="fc.single ? 'Sorry, you can recieve this only once' :
+                'You need to wait for the countdown to end' | translate"
                 placement="top"
                 [showTooltip]="true"
-                delay="300"
-              >
+                delay="300">
                 <button
                   disabled
-                  class="btn btn--center btn--empty-blue btn--small btn--hidden"
-                >{{'Received' | translate}}</button>
+                  class="btn btn--center btn--empty-blue btn--small
+                  btn--hidden">{{'Received'
+                  | translate}}</button>
               </div>
             </div>
           </td>
         </tr>
         <tr
           class="table__row balance__table-row"
-          *ngIf="!freecoinsList.length && !loading"
-        >
+          *ngIf="!freecoinsList.length && !loading">
           <td
             class="table__cell"
-            colspan="4"
-          >
+            colspan="4">
             {{'No any free coins' | translate}}
           </td>
         </tr>
@@ -112,8 +124,7 @@
     <div class="banner-wr">
       <img
         src="assets/img/banner03.png"
-        alt=""
-      >
+        alt="">
     </div>
   </div>
 </div>
@@ -122,11 +133,9 @@
   *ngIf="showFreeCoinsPopup"
   [showPopup]="showFreeCoinsPopup"
   (closeFreeCoinsPopup)="onToggleFreeCoinsPopup(false)"
-  (refreshCoins)="refreshCoins()"
-></app-freecoins-popup>
+  (refreshCoins)="refreshCoins()"></app-freecoins-popup>
 
 <app-freecoins-captcha
   *ngIf="showFreeCoinsCaptcha"
   (resolve)="onResolveCaptcha($event)"
-  (close)="onToggleCaptcha(false)"
-></app-freecoins-captcha>
+  (close)="onToggleCaptcha(false)"></app-freecoins-captcha>
