DEVEX-3989 small fixes

--- a/src/app/freecoins/freecoins-popup/freecoins-popup.component.html
+++ b/src/app/freecoins/freecoins-popup/freecoins-popup.component.html
@@ -109,7 +109,7 @@
       ></app-freecoins-popup-step-two>
       <app-freecoins-popup-step-three
         *ngIf="step === 3"
-        (close)="onCloseFreeCoinsPopupRefresh()"
+        (close)="onCloseFreeCoinsPopup()"
       ></app-freecoins-popup-step-three>
     </div>
   </div>
