--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -34,7 +34,7 @@
       href="https://about.exrates.me/ru/form-listing"
     >
       <img
-        src="assets/img/apply-by-listing.png"
+        src="assets/img/dom-banner.gif"
         alt=""
       >
     </a>
