--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -31,7 +31,7 @@
     </style>
     <a
       class="banner-content"
-      href="https://about.exrates.me/ru/form-listing"
+      routerLink="/ieo/2"
     >
       <img
         src="assets/img/dom-banner.gif"
