--- a/src/app/dashboard/components/currency-pair-info-mobile/currency-pair-info-mobile.component.html
+++ b/src/app/dashboard/components/currency-pair-info-mobile/currency-pair-info-mobile.component.html
@@ -12,38 +12,23 @@
       ></app-dynamic-input-dashboard>
       <div
         class="currency-pair-info__info"
+        *ngIf="currentCurrencyInfo"
         [ngClass]="{
-          'currency-pair-info__info--up': isIncrease,
-          'currency-pair-info__info--down': !isIncrease
+          'currency-pair-info__info--up': flagForArrow('up'),
+          'currency-pair-info__info--down': flagForArrow('down')
         }"
       >
         <div class="currency-pair-info__change">
           <span>
-            <!-- {{isIncrease ? '+' : '-'}}--> {{currentCurrencyInfo?.percentChange || 0 | number:'1.0-2' | replaceNumber}}%
+            {{currentCurrencyInfo.percentChange | positivePipe | currencyFormat: 'USD'}}%
           </span>
-          <span
-            style="margin-left: 10px;"
-            *ngIf="currentCurrencyInfo?.changedValue < 0.01 && currentCurrencyInfo?.changedValue > 0; else changedValue"
-          >
-            <!-- {{isIncrease ? '+' : '-'}}--> {{currentCurrencyInfo?.changedValue || 0 | replaceNumber : false }} {{pair.name | splitCurrency : 2}}
+          <span style="margin-left: 10px;">
+            {{currentCurrencyInfo.changedValue | positivePipe  | currencyFormat }} {{pair.name | splitCurrency : 2}}
           </span>
-          <ng-template #changedValue>
-            <span style="margin-left: 10px;">
-              <!-- {{isIncrease ? '+' : '-'}}--> {{currentCurrencyInfo?.changedValue || 0 | replaceNumber : isFiat(2) }} {{pair.name | splitCurrency : 2}}
-            </span>
-          </ng-template>
         </div>
-        <div
-          class="currency-pair-info__price"
-          *ngIf="currentCurrencyInfo?.currencyRate < 0.01 && currentCurrencyInfo?.currencyRate > 0; else currencyRate"
-        >
-          {{currentCurrencyInfo?.currencyRate || 0 | replaceNumber : false }} {{pair.name | splitCurrency : 2}}
+        <div class="currency-pair-info__price">
+          {{currentCurrencyInfo.currencyRate | currencyFormat }} {{pair.name | splitCurrency : 2}}
         </div>
-        <ng-template #currencyRate>
-          <div class="currency-pair-info__price">
-            {{currentCurrencyInfo?.currencyRate || 0 | replaceNumber : isFiat(2) }} {{pair.name | splitCurrency : 2}}
-          </div>
-        </ng-template>
       </div>
     </div>
   </div>
