--- a/src/app/funds/balance/send-money/send-step-three/transfer-instant/transfer-instant.component.html
+++ b/src/app/funds/balance/send-money/send-step-three/transfer-instant/transfer-instant.component.html
@@ -17,159 +17,135 @@
             (selectCurrency)="selectCurrency($event)"
           ></app-currency-select-crypto>
         </div>
+
+        <div
+          class="wrap-input send__wrap-input"
+          [ngClass]="{'wrap-input--error': formAmount.invalid && (formAmount.touched || isSubmited)}"
+        >
+          <div class="avaliable">
+            {{'Available:' | translate}}
+            <a
+              (click)="balanceClick()"
+              class="link"
+              [ngStyle]="{'pointer-events': loadingBalance ? 'none' : 'auto'}"
+            >
+              {{activeBalance | currencyFormat}} {{activeCrypto.name}}
+            </a>
+          </div>
+          <app-price-input
+            [placeholder]="activeCrypto.name + ' Amount'"
+            [currencyName]="activeCrypto.name"
+            (customBlur)="amountBlur($event)"
+            name="amount"
+            formControlName="amount"
+            autocomplete="off"
+          >
+          </app-price-input>
+          <span class="bottom-tooltip wrap-input__message--show">
+            {{'Minimum sum for transfer' | translate}} {{minWithdrawSum}} {{activeCrypto.name}}
+          </span>
+
+          <!--Input error section starts-->
+          <div *ngIf="formAmount.errors">
+            <div class="input-hint-wrapper">
+              <span
+                class="wrap-input__message wrap-input__message--show"
+                *ngIf="formAmount.errors['isMinThenMinWithdraw'] && (formAmount.touched || isSubmited)"
+              >
+                {{'Minimum sum for transfer' | translate}} {{minWithdrawSum}} {{activeCrypto.name}}
+              </span>
+              <span
+                class="wrap-input__message wrap-input__message--show"
+                *ngIf="formAmount.errors['isMaxThenActiveBalance'] && (formAmount.touched || isSubmited)"
+              >
+                {{'Max sum for transfer' | translate}} {{activeBalance}} {{activeCrypto.name}}
+              </span>
+            </div>
+          </div>
+        </div>
+
+
+        <div
+          class="wrap-input  send__wrap-input"
+          [ngClass]="{'wrap-input--error': formEmail.invalid && (formEmail.touched || isSubmited)}"
+        >
+          <input
+            class="wrap-input__input"
+            name="email"
+            formControlName="email"
+            autocomplete="off"
+            required
+          >
+          <label class="wrap-input__label">{{'Email' | translate}}</label>
+          <div class="wrap-input__line"></div>
+          <!--Input error section starts-->
+          <div *ngIf="formEmail.invalid && formEmail.errors && !pendingCheckEmail">
+            <div class="input-hint-wrapper">
+              <span
+                class="wrap-input__message"
+                *ngIf="formEmail.errors['emailInvalid'] || formEmail.errors['required'] && (formEmail.touched || isSubmited)"
+              >
+                {{'Enter valid email to transfer' | translate}}
+              </span>
+
+              <span
+                class="wrap-input__message"
+                *ngIf="formEmail.errors['checkEmailCrash'] && (formEmail.touched  || isSubmited)"
+              >
+                {{'Service is temporary unavailable, please try again later' | translate}}
+              </span>
+              <span
+                class="wrap-input__message"
+                *ngIf="formEmail.errors['USER_EMAIL_NOT_FOUND']"
+              >
+                {{'User email not found.' | translate}}
+              </span>
+              <span
+                class="wrap-input__message"
+                *ngIf="formEmail.errors['ownEmail']"
+              >
+                {{'You can not send the transfer to your current user.' | translate}}
+              </span>
+            </div>
+          </div>
+        </div>
       </div>
-  </div>
 
-  <div
-    class="wrap-input send__wrap-input"
-    [ngClass]="{'wrap-input--error': formAmount.invalid &&
-            (formAmount.touched || isSubmited)}"
-  >
-    <div class="avaliable">
-      {{'Available:' | translate}}
-      <a
-        (click)="balanceClick()"
-        class="link"
-        [ngStyle]="{'pointer-events': loadingBalance ? 'none' : 'auto'}"
-      >
-        {{activeBalance | currencyFormat}} {{activeCrypto.name}}
-      </a>
-    </div>
-    <app-price-input
-      [placeholder]="activeCrypto.name + ' Amount'"
-      [currencyName]="activeCrypto.name"
-      (customBlur)="amountBlur($event)"
-      name="amount"
-      formControlName="amount"
-      autocomplete="off"
-    >
-    </app-price-input>
-    <span class="bottom-tooltip wrap-input__message--show">
-      {{'Minimum sum for transfer' | translate}} {{minWithdrawSum}} {{activeCrypto.name}}
-    </span>
-
-    <!--Input error section starts-->
-    <div *ngIf="formAmount.errors">
-      <div class="input-hint-wrapper">
-        <span
-          class="wrap-input__message wrap-input__message--show"
-          *ngIf="formAmount.errors['isMinThenMinWithdraw'] && (formAmount.touched || isSubmited)"
-        >
-          {{'Minimum sum for transfer' | translate}} {{minWithdrawSum}} {{activeCrypto.name}}
-        </span>
-        <span
-          class="wrap-input__message wrap-input__message--show"
-          *ngIf="formAmount.errors['isMaxThenActiveBalance'] && (formAmount.touched || isSubmited)"
-        >
-          {{'Max sum for transfer' | translate}} {{activeBalance}} {{activeCrypto.name}}
-        </span>
+    </form>
+    <div class="send__line"></div>
+    <div class="send__info">
+      <div class="send__info-row">
+        <div class="send__info-title">{{'You want to transfer:' | translate}}</div>
+        <div class="send__info-value">{{responseCommission.amount | currencyFormat}} {{activeCrypto.name}}</div>
+      </div>
+      <div class="send__info-row">
+        <div class="send__info-title">{{'Exchange comission:' | translate}}</div>
+        <div class="send__info-value">{{responseCommission.companyCommissionRate | currencyFormat}} =
+          {{responseCommission.totalCommissionAmount | currencyFormat}} {{activeCrypto.name}}
+        </div>
+      </div>
+      <div class="send__info-row">
+        <div class="send__info-title">{{'Total with comission:' | translate}}</div>
+        <div class="send__info-value">{{responseCommission.resultAmount | currencyFormat}} {{activeCrypto.name}}</div>
       </div>
     </div>
-  </div>
+    <button
+      class="btn btn--center"
+      [disabled]="form.invalid || pendingCheckEmail"
+      (click)="submitTransfer()"
+    >{{'Transfer' | translate}}</button>
+    <div class="send__line"></div>
 
-
-  <div
-    class="wrap-input  send__wrap-input"
-    [ngClass]="{'wrap-input--error': formEmail.invalid && (formEmail.touched || isSubmited)}"
-  >
-    <input
-      class="wrap-input__input"
-      name="email"
-      formControlName="email"
-      autocomplete="off"
-      required
-    >
-    <label class="wrap-input__label">{{'Email' | translate}}</label>
-    <div class="wrap-input__line"></div>
-    <!--Input error section starts-->
-    <div *ngIf="formEmail.invalid && formEmail.errors && !pendingCheckEmail">
-      <div class="input-hint-wrapper">
-        <span
-          class="wrap-input__message"
-          *ngIf="formEmail.errors['emailInvalid'] || formEmail.errors['required'] && (formEmail.touched || isSubmited)"
-        >
-          {{'Enter valid email to transfer' | translate}}
-        </span>
-
-        <span
-          class="wrap-input__message"
-          *ngIf="formEmail.errors['checkEmailCrash'] && (formEmail.touched  || isSubmited)"
-        >
-          {{'Service is temporary unavailable, please try again later' | translate}}
-        </span>
-        <span
-          class="wrap-input__message"
-          *ngIf="formEmail.errors['USER_EMAIL_NOT_FOUND']"
-        >
-          {{'User email not found.' | translate}}
-        </span>
-        <span
-          class="wrap-input__message"
-          *ngIf="formEmail.errors['ownEmail']"
-        >
-          {{'You can not send the transfer to your current user.' | translate}}
-        </span>
-      </div>
+    <div class="note modal__note">
+      <div class="note__title">{{'Please note:' | translate}}</div>
+      <ul class="note__list">
+        <li class="note__list-item">
+          {{'Once you have submitted your transfer request, we will send a confirmation email. Please then click on the confirmation link in your email' | translate}}.
+        </li>
+        <li class="note__list-item">{{'After making a transfer, you can track its progress in history on funds page' | translate}}.</li>
+      </ul>
     </div>
   </div>
-</div>
-</form>
-<div class="send__line"></div>
-<div class="send__info">
-  <div class="send__info-row">
-    <div class="send__info-title">{{'You want to transfer:' | translate}}</div>
-    <div class="send__info-value">{{responseCommission.amount | currencyFormat}} {{activeCrypto.name}}</div>
-  </div>
-  <div class="send__info-row">
-    <div class="send__info-title">{{'Exchange comission:' | translate}}</div>
-    <div class="send__info-value">{{responseCommission.companyCommissionRate | currencyFormat}} =
-      {{responseCommission.totalCommissionAmount | currencyFormat}} {{activeCrypto.name}}
-    </div>
-  </div>
-  <div class="send__info-row">
-    <div class="send__info-title">{{'Total with comission:' | translate}}</div>
-    <div class="send__info-value">{{responseCommission.resultAmount | currencyFormat}} {{activeCrypto.name}}</div>
-  </div>
-</div>
-<button
-  class="btn btn--center"
-  [disabled]="form.invalid || pendingCheckEmail"
-  (click)="submitTransfer()"
->{{'Transfer' | translate}}</button>
-<div class="send__line"></div>
-
-<div class="note modal__note">
-  <div class="note__title">{{'Please note:' | translate}}</div>
-  <ul class="note__list">
-    <li class="note__list-item">
-      {{'Once you have submitted your transfer request, we will send a confirmation email. Please then click on the confirmation link in your email' | translate}}.
-    </li>
-    <li class="note__list-item">{{'After making a transfer, you can track its progress in history on funds page' | translate}}.</li>
-  </ul>
-</div>
-
-</div>
-<div class="send__info-row">
-  <div class="send__info-title">{{'Total with comission:' | translate}}</div>
-  <div class="send__info-value">{{responseCommission.resultAmount}} {{activeCrypto ? activeCrypto.name : ''}}</div>
-</div>
-</div>
-<button
-  class="btn btn--center"
-  [disabled]="!form.valid || pendingCheckEmail"
-  (click)="submitTransfer()"
->{{'Transfer' | translate}}</button>
-<div class="send__line"></div>
-<div class="note modal__note">
-  <div class="note__title">{{'Please note:' | translate}}</div>
-  <ul class="note__list">
-    <li class="note__list-item">
-      {{'Once you have submitted your withdrawal request, we will send a confirmation email. Please then click on the confirmation link in your email' | translate}}.
-    </li>
-    <li class="note__list-item">{{'After making a withdrawal, you can track its progress in history on funds page' | translate}}.</li>
-  </ul>
-</div>
-</div>
 </div>
 
 <div
