--- a/src/app/funds/balance/send-money/send-step-three/transfer-protected-code/transfer-protected-code.component.html
+++ b/src/app/funds/balance/send-money/send-step-three/transfer-protected-code/transfer-protected-code.component.html
@@ -17,8 +17,6 @@
             (selectCurrency)="selectCurrency($event)"
           ></app-currency-select-crypto>
         </div>
-      </div>
-
 
         <div
           class="wrap-input send__wrap-input"
@@ -54,22 +52,21 @@
                 class=" wrap-input__message--show"
                 *ngIf="formAmount.errors['isMinThenMinWithdraw']"
                 [ngClass]="{'wrap-input__message': formAmount.errors['isMinThenMinWithdraw'] &&
-                  (formAmount.touched || isSubmited)}"
+                        (formAmount.touched || isSubmited)}"
               >
                 {{'Minimum sum for transfer' | translate}} {{minWithdrawSum}} {{activeCrypto.name}}</span>
               <span
                 class="wrap-input__message wrap-input__message--show"
                 *ngIf="formAmount.errors['isMaxThenActiveBalance'] &&
-                  (formAmount.touched || isSubmited)"
+                        (formAmount.touched || isSubmited)"
               >
                 {{'Max sum for transfer' | translate}} {{activeBalance}} {{activeCrypto.name}}</span>
             </div>
           </div>
           <!--Input error section ends-->
         </div>
-
-
       </div>
+
     </form>
     <div class="send__line"></div>
     <div class="send__info">
@@ -109,23 +106,6 @@
     </div>
 
   </div>
-  <button
-    class="btn btn--center"
-    [disabled]="!form.valid"
-    (click)="submitTransfer()"
-  >
-    {{'Create code' | translate}}
-  </button>
-  <div class="send__line"></div>
-  <div class="note modal__note">
-    <div class="note__title">{{'Please note:' | translate}}</div>
-    <ul class="note__list">
-      <li class="note__list-item">{{'Once you have submitted your withdrawal request, we will send a confirmation email. Please then click on the confirmation link in your email' | translate}}.
-      </li>
-      <li class="note__list-item">{{'After making a withdrawal, you can track its progress in history on funds page' | translate}}.</li>
-    </ul>
-  </div>
-</div>
 </div>
 
 <div
@@ -142,9 +122,15 @@
     class="captcha-wrapper side-popups send-protected-s3"
   >
     <h6 class="popup__title">{{'Enter the captcha' | translate}}</h6>
-    <re-captcha (resolved)="afterResolvedCaptcha($event)" [siteKey]="recaptchaKey"></re-captcha>
+    <re-captcha
+      (resolved)="afterResolvedCaptcha($event)"
+      [siteKey]="recaptchaKey"
+    ></re-captcha>
     <div class="popup__links-wrap  popup__links-wrap--center">
-      <a class="popup__link" (click)="goToForm()">{{'Back to transfer form' | translate}}</a>
+      <a
+        class="popup__link"
+        (click)="goToForm()"
+      >{{'Back to transfer form' | translate}}</a>
     </div>
   </div>
 </ng-container>
@@ -154,6 +140,9 @@
   <div class="captcha-wrapper side-popups send-protected-s3">
     <h6 class="popup__title popup_title--dm">{{'Enter the captcha' | translate}}</h6>
     <h4 class="popup__subtitle popup_title--dm">Captcha emulation for developers and QA</h4>
-    <button class="btn btn--center" (click)="afterResolvedCaptcha($event)">Resolve</button>
+    <button
+      class="btn btn--center"
+      (click)="afterResolvedCaptcha($event)"
+    >Resolve</button>
   </div>
 </ng-template>
