--- a/src/app/funds/balance/balance-mob/balance-mob.component.html
+++ b/src/app/funds/balance/balance-mob/balance-mob.component.html
@@ -50,7 +50,7 @@
       </button>
       <!-- FUG BLOCK -->
       <button
-        *ngIf="utils.showContentProd"
+        *ngIf="utils.isDeveloper"
         class="tabs__item"
         [ngClass]="{'tabs__item--active': currTab === Tab.QUBERA}"
         (click)="onSelectTab.emit(Tab.QUBERA)"
