--- a/src/app/funds/balance/balance.component.html
+++ b/src/app/funds/balance/balance.component.html
@@ -217,7 +217,7 @@
 
         <!-- FUG BLOCK -->
         <button
-          *ngIf="utilsService.showContentProd"
+          *ngIf="utilsService.isDeveloper"
           class="tabs__item funding-tabs"
           [ngClass]="{'tabs__item--active': currTab === Tab.QUBERA}"
           (click)="onSelectTab(Tab.QUBERA)"
