--- a/src/app/funds/balance/qubera-mob/qubera-mob.component.html
+++ b/src/app/funds/balance/qubera-mob/qubera-mob.component.html
@@ -27,7 +27,7 @@
 
       <!-- FUG BLOCK -->
       <button
-        *ngIf="utilsService.showContentProd"
+        *ngIf="utilsService.isDeveloper"
         class="tabs__item"
         (click)="selectTab.emit(Tab.QUBERA)"
         [ngClass]="{'tabs__item--active': currTab === Tab.QUBERA}"
