--- a/src/app/settings/session/session.component.html
+++ b/src/app/settings/session/session.component.html
@@ -1,12 +1,20 @@
-<div class="settings__content">
+<div class="settings__content session-tab">
   <h3 class="title settings__content-title">{{'Session Time' | translate}}</h3>
 
   <div class="subtitle settings__content-subtitle">
     {{'This is the time period, which will hold you as logged in user after the last action. Session time may be from 5 till 120 minutes.' | translate}}
   </div>
-  <form class="settings-form" [formGroup]="form" (ngSubmit)="onSubmit()">
+  <form
+    class="settings-form"
+    [formGroup]="form"
+    (ngSubmit)="onSubmit()"
+  >
     <div class="settings__time-range">
-      <ng5-slider [(value)]="value" [options]="options" (valueChange)="update()">
+      <ng5-slider
+        [(value)]="value"
+        [options]="options"
+        (valueChange)="update()"
+      >
       </ng5-slider>
     </div>
 
@@ -22,7 +30,10 @@
           (input)="validateInputs()"
           (blur)="formatInputs()"
         />
-        <label class="wrap-input__label" for="">{{'Hours' | translate}}</label>
+        <label
+          class="wrap-input__label"
+          for=""
+        >{{'Hours' | translate}}</label>
         <div class="wrap-input__line"></div>
 
         <!--Input Error section-->
@@ -45,7 +56,10 @@
           (input)="validateInputs()"
           (blur)="formatInputs()"
         />
-        <label class="wrap-input__label" for="">{{'Minutes' | translate}}</label>
+        <label
+          class="wrap-input__label"
+          for=""
+        >{{'Minutes' | translate}}</label>
         <div class="wrap-input__line"></div>
 
         <!--Input Error section-->
@@ -65,4 +79,150 @@
       [disabled]="(+oldValue === +value) || loading"
     >{{'Save' | translate}}</button>
   </form>
+
+  <table class="table ballance-table session-history-table">
+    <thead>
+      <tr>
+        <th class="table__cell-head table__cell-head--tal destop-content">{{'Device' | translate}}</th>
+        <th class="table__cell-head table__cell-head--tal destop-content">{{'Location' | translate}}</th>
+        <th class="table__cell-head table__cell-head--tal destop-content">{{'Recent Activity' | translate}}</th>
+      </tr>
+    </thead>
+    <tbody class="table__body">
+      <tr class="table__row balance__table-row">
+        <td
+          class="table__cell table__cell--tal"
+          (click)="openAdditionalHistory($event)"
+        >
+          <span class="row-type mobile-content">Device</span>
+          <span>Opera(Mac)</span>
+          <div class="additional-mobile">
+            <div class="ip-wr">
+              <span class="row-type mobile-content">Location</span>
+              <span>196.192.10.10 / Ukraine</span>
+            </div>
+            <div class="date-wr">
+              <span class="row-type mobile-content">Recent Activity</span>
+              <span>9.12am 13-10-2018</span>
+            </div>
+          </div>
+        </td>
+        <td class="table__cell table__cell--tal destop-content">
+          <span>196.192.10.10 / Ukraine</span>
+        </td>
+        <td class="table__cell table__cell--tal destop-content">
+          <span>Active</span>
+        </td>
+      </tr>
+      <tr class="table__row balance__table-row">
+        <td
+          class="table__cell table__cell--tal"
+          (click)="openAdditionalHistory($event)"
+        >
+          <span class="row-type mobile-content">Device</span>
+          <span>Safari(Windows 10)</span>
+          <div class="additional-mobile">
+            <div class="ip-wr">
+              <span class="row-type mobile-content">Location</span>
+              <span>196.192.10.10 / Ukraine</span>
+            </div>
+            <div class="date-wr">
+              <span class="row-type mobile-content">Recent Activity</span>
+              <span>9.12am 13-10-2018</span>
+            </div>
+          </div>
+        </td>
+        <td class="table__cell table__cell--tal destop-content">
+          <span>196.192.10.10 / Ukraine</span>
+        </td>
+        <td class="table__cell table__cell--tal destop-content">
+          <span>11.44am 14-10-2018</span>
+        </td>
+      </tr>
+      <tr class="table__row balance__table-row">
+        <td
+          class="table__cell table__cell--tal"
+          (click)="openAdditionalHistory($event)"
+        >
+          <span class="row-type mobile-content">Device</span>
+          <span>Google Chrome(Android 8.0)</span>
+          <div class="additional-mobile">
+            <div class="ip-wr">
+              <span class="row-type mobile-content">Location</span>
+              <span>196.192.10.10 / Ukraine</span>
+            </div>
+            <div class="date-wr">
+              <span class="row-type mobile-content">Recent Activity</span>
+              <span>9.12am 13-10-2018</span>
+            </div>
+          </div>
+        </td>
+        <td class="table__cell table__cell--tal destop-content">
+          <span>196.192.10.10 / Ukraine</span>
+        </td>
+        <td class="table__cell table__cell--tal destop-content">
+          <span>9.12am 13-10-2018</span>
+        </td>
+      </tr>
+      <tr class="table__row balance__table-row">
+        <td
+          class="table__cell table__cell--tal"
+          (click)="openAdditionalHistory($event)"
+        >
+          <span class="row-type mobile-content">Device</span>
+          <span>Google Chrome(iOS)</span>
+          <div class="additional-mobile">
+            <div class="ip-wr">
+              <span class="row-type mobile-content">Location</span>
+              <span>196.192.10.10 / Ukraine</span>
+            </div>
+            <div class="date-wr">
+              <span class="row-type mobile-content">Recent Activity</span>
+              <span>9.12am 13-10-2018</span>
+            </div>
+          </div>
+        </td>
+        <td class="table__cell table__cell--tal destop-content">
+          <span>196.192.10.10 / Ukraine</span>
+        </td>
+        <td class="table__cell table__cell--tal destop-content">
+          <span>1.35pm 12-10-2018</span>
+        </td>
+      </tr>
+      <tr class="table__row balance__table-row">
+        <td
+          class="table__cell table__cell--tal"
+          (click)="openAdditionalHistory($event)"
+        >
+          <span class="row-type mobile-content">Device</span>
+          <span>Exrates App(iOS)</span>
+          <div class="additional-mobile">
+            <div class="ip-wr">
+              <span class="row-type mobile-content">Location</span>
+              <span>196.192.10.10 / Ukraine</span>
+            </div>
+            <div class="date-wr">
+              <span class="row-type mobile-content">Recent Activity</span>
+              <span>9.12am 13-10-2018</span>
+            </div>
+          </div>
+        </td>
+        <td class="table__cell table__cell--tal destop-content">
+          <span>196.192.10.10 / Ukraine</span>
+        </td>
+        <td class="table__cell table__cell--tal destop-content">
+          <span>8.23am 12-10-2018</span>
+        </td>
+      </tr>
+
+      <tr class="table__row balance__table-row">
+        <td
+          class="table__cell table__cell--tac"
+          colspan="10"
+        >
+          {{'No matching records found' | translate}}
+        </td>
+      </tr>
+    </tbody>
+  </table>
 </div>
